apps/alloy/templates/alloy-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alloy-rum-ingress
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alloy.shivpatel.xyz`)
      kind: Rule
      services:
        - name: alloy
          port: 12345
    - match: Host(`rum.shivpatel.xyz`)
      kind: Rule
      middlewares:
        - name: alloy-rum-cors
        - name: alloy-rum-body-limit
        - name: alloy-rum-rate-limit
      services:
        - name: alloy
          port: 12347
  tls: {}
